# QT-BankingSystem

./: CMakeLists.txt  GlowLineEdit.h  Profilepic.qrc  README.md  Test.py  btc_backend.py  dashboardwindow.cpp  dashboardwindow.h  dashboardwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
forms/: dashboardwindow.ui
include/: mainwindow.h
scripts/: Test.py  getBTCPrice.py  simulatedBTCPrice.py
src/: dashboardwindow.cpp  mainwindow.ui
